tests/snapshots/run_wpt_conformance__litert_batchNormalization_float32_4D_NHWC_tensor_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "batch_normalization.https.any.js",
    "batchNormalization float32 4D NHWC tensor all options",
    "litert",
    "PASS",
)
